[package]
name = "hoshiguma-telemetry-protocol"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[dependencies]
enumset = { version = "1.1.5", features = ["serde"] }
heapless = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = ["serde/std"]
