[package]
name = "telemetry-receiver"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4.3.18", features = ["derive"] }
git-version = "0.3.5"
postcard = { version = "1.0.10", features = ["use-std"] }
serde = "1.0.210"
serialport = "4.2.1"
hoshiguma-telemetry-protocol = { path = "../telemetry-protocol" }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde_json = "1.0.132"
