[package]
name = "satori"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2021"
license = "MIT"

[features]
default = ["telemetry"]
telemetry = ["dep:postcard"]
debug-output = []

[[bin]]
name = "satori"
test = false
bench = false

[dependencies]
atmega-hal = { git = "https://github.com/rahix/avr-hal", rev = "38549cc4142881d302374535b3621578ffccaff2", features = ["atmega328p"] }
avr-device = { version = "0.5.4", features = ["rt", "atmega328p"] }
avr-hal-generic = { git = "https://github.com/rahix/avr-hal", rev = "38549cc4142881d302374535b3621578ffccaff2" }
embedded-hal = { package = "embedded-hal", version = "1.0.0" }
embedded-hal-p2 = { package = "embedded-hal", version = "0.2.0" }
enumset = { version = "1.1.3", features = ["serde"] }
git-version = "0.3.9"
heapless = { version = "0.8.0", features = ["serde"] }
hoshiguma-foundational-data = { path = "../../common/foundational-data", default-features = false }
nb = "1.1.0"
onewire = "0.3.13"
postcard = { version = "1.0.8", optional = true }
ufmt = "0.2.0"

[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
