[package]
name = "hoshiguma-core"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[features]
default = ["std"]

std = [
  "chrono/std",
  "serde/std",
  "strum/std",
]

no-std = [
  "dep:defmt",
  "chrono/defmt",
  "heapless/defmt",
]

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["serde"] }
crc = "3.4.0"
defmt = { version = "1.0.1", optional = true }
heapless = { version = "0.9.2", features = ["serde"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
strum = { version = "0.27.1", default-features = false, features = ["derive"] }

[lints.rust]
unused_crate_dependencies = "deny"
