[package]
name = "hoshiguma-api-client"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[dependencies]
hoshiguma-api = { path = "../hoshiguma-api" }
postcard = { version = "1.1.3", features = ["use-std"] }
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "io-util"] }

[lints.rust]
unused_crate_dependencies = "deny"
