[package]
name = "hoshiguma-api-client"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[lib]
name = "hoshiguma_api_client"
path = "src/lib/lib.rs"

[[bin]]
name = "cooler"
path = "src/cooler/main.rs"

[[bin]]
name = "hmi"
path = "src/hmi/main.rs"

[[bin]]
name = "rear-sensor-board"
path = "src/rear_sensor_board/main.rs"

[dependencies]
env_logger = "0.11.10"
hoshiguma-api = { path = "../hoshiguma-api" }
log = "0.4.29"
serde = "1.0.228"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
