[package]
name = "hoshiguma-api"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[features]
default = [
    "std",
    "device-cooler",
    "device-hmi",
    "device-rear-sensor-board",
    "device-telemetry-bridge",
]
device-cooler = []
device-hmi = []
device-rear-sensor-board = []
device-telemetry-bridge = [
  "chrono",
]

std = [
  "chrono/std",
  "postcard/use-std",
  "serde/std",
  "strum/std",
]

[dependencies]
chrono = { version = "0.4.44", default-features = false, features = ["defmt", "serde"], optional = true }
defmt = "1.0.1"
getset = "0.1.6"
heapless = { version = "0.9.2", features = ["defmt", "serde"] }
postcard = { version = "1.1.3", default-features = false, features = ["defmt"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }

[lints.rust]
unused_crate_dependencies = "deny"
