[package]
name = "hoshiguma-common"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["defmt", "serde"] }
defmt = "1.0.1"
embassy-sync = "0.7.2"
heapless = { version = "0.9.2", features = ["defmt", "serde"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }

[lints.rust]
unused_crate_dependencies = "deny"
