[package]
name = "hoshiguma-common"
version = "0.1.0"
authors = ["Dan Nixon <dan@dan-nixon.com>"]
edition = "2024"
license = "MIT"

[dependencies]
chrono = { version = "0.4.43", default-features = false, features = ["defmt", "serde"] }
defmt = "1.0.1"
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["defmt", "medium-ethernet", "proto-ipv4", "tcp"] }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
embedded-io-async = "0.7.0"
heapless = { version = "0.9.2", features = ["defmt", "serde"] }
hoshiguma-api = { path = "../hoshiguma-api", default-features = false }
serde = { version = "1.0.228", default-features = false }

[lints.rust]
unused_crate_dependencies = "deny"
